--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Tutoring with Arya and Shail</title>
+    <title>HightTu Tutoring</title>
     <meta chrarset="utf-8">
     <link href="style.css" rel="stylesheet">
   <nav class='directorys'>
