Spelling error on involved.html

--- a/involved.html
+++ b/involved.html
@@ -15,7 +15,7 @@
     </nav>
   </header>
   <body>
-    <h1>Get Invoulved</h1>
+    <h1>Get Involved</h1>
     <h3>Do you want to join our team and make learning core subjects easier for other students?</h3>
     <p>If you are a high school student and willing to tutor other students then please send us a email at highttututoring@gmail.com. Once you contact us, we will reach out to you with the criteria to be a part of our team. Thank you for your support.</p>
   </body>
