--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </nav>
   </head>
   <body>
-    <h1>Welcome to HightTu Tutoring!</h1>
+    <h1>Welcome to HighTu Tutoring!</h1>
     <h4 id='catch-phrase'>"For students, by students."</h4>
   </body>
 </html>
